Sync frontend from private repo

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 VITE_AUTH0_DOMAIN=your-tenant.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=your-client-id
 VITE_AUTH0_AUDIENCE=https://eurodata.app/api
+# Leave empty when using ngrok (app at https://xxx.ngrok-free.app) so API calls use same origin and proxy.
+# When backend uses API_VERSION=v1, dev proxy rewrites /api -> /v1/api (docker-compose.dev sets VITE_API_PROXY_PREFIX from API_VERSION).
 VITE_API_URL=http://localhost:8000/v1
 VITE_APP_NAME=eurodata.app
 VITE_APP_DESCRIPTION=Personal finance manager for your bank accounts
